<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>KSearchTransactionDlg</class>
 <widget class="QDialog" name="KSearchTransactionDlg">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>771</width>
    <height>481</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Search transactions</string>
  </property>
  <property name="sizeGripEnabled">
   <bool>true</bool>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QTabWidget" name="m_tabWidget">
     <widget class="QWidget" name="m_resultPage">
      <attribute name="title">
       <string>Result</string>
      </attribute>
      <layout class="QVBoxLayout">
       <item>
        <widget class="LedgerView" name="m_ledgerView"/>
       </item>
       <item>
        <widget class="QLabel" name="m_foundText">
         <property name="text">
          <string>F</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
         </property>
         <property name="wordWrap">
          <bool>false</bool>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="standardButtons">
      <set>QDialogButtonBox::Apply|QDialogButtonBox::Close|QDialogButtonBox::Help|QDialogButtonBox::Reset</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>LedgerView</class>
   <extends>QTableView</extends>
   <header>ledgerview.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>m_tabWidget</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
